# qt_nmr

./: .gitignore  README.rst  pyproject.toml  setup.py
qt_nmr/: app.py
qt_nmr/controller/: adapter.py  controller.py
qt_nmr/model/: model.py
qt_nmr/view/: mainwindow.py  settings.py  ui.py  widgets.py
qt_nmr/view/widgets/: buttons.py  entry.py  toolbars.py
src/qt_nmr/: __main__.py
src/qt_nmr/view/: mainwindow.py
src/qt_nmr/view/widgets/: entry.py
tests/: test_app.py  test_controller.py  test_integration.py  test_model.py  test_view.py
tests/accepted_data/: make_refs.py
